added kafka bootstrap configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Kafka configurations
+#spring.kafka.producer-bootstrap:localhost:9092
+
 
 
