made changes to app.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Nithin Added Something about main
 
+#Ramu added the changes 
+
 
 
